[ACPI] support button driver unload (Luming Yu) http://bugzilla.kernel.org/show_bug.cgi?id=2281