drivers/acpi/scan.c
@@ -15,6 +15,8 @@ ACPI_MODULE_NAME		("scan")
 #define STRUCT_TO_INT(s)	(*((int*)&s))
 
 extern struct acpi_device		*acpi_root;
+extern struct acpi_device 		*fixed_pwr_button;
+extern struct acpi_device 		*fixed_sleep_button;
 
 
 #define ACPI_BUS_CLASS			"system_bus"
@@ -904,6 +906,10 @@ acpi_bus_scan_fixed (
 
 	ACPI_FUNCTION_TRACE("acpi_bus_scan_fixed");
 
+	fixed_pwr_button = NULL;
+	fixed_sleep_button = NULL;
+
+
 	if (!root)
 		return_VALUE(-ENODEV);
 
@@ -911,11 +917,11 @@ acpi_bus_scan_fixed (
 	 * Enumerate all fixed-feature devices.
 	 */
 	if (acpi_fadt.pwr_button == 0)
-		result = acpi_bus_add(&device, acpi_root, 
+		result = acpi_bus_add(&fixed_pwr_button, acpi_root, 
 			NULL, ACPI_BUS_TYPE_POWER_BUTTON);
 
 	if (acpi_fadt.sleep_button == 0)
-		result = acpi_bus_add(&device, acpi_root, 
+		result = acpi_bus_add(&fixed_sleep_button, acpi_root, 
 			NULL, ACPI_BUS_TYPE_SLEEP_BUTTON);
 
 	return_VALUE(result);
